--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "db:setup": "node scripts/setup-db.js"
+    "db:setup": "node scripts/setup-db.js",
+    "build:css": "./build-tailwind.sh"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
@@ -19,7 +20,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^4.1.8",
+    "tailwindcss": "3.3.0",
     "ua-parser-js": "^1.0.37",
     "web-vitals": "^3.5.0"
   },
@@ -30,6 +31,7 @@
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "@types/ua-parser-js": "^0.7.37",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.51.0",
     "eslint-config-next": "14.0.0",
     "jest": "^29.7.0",
