--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,41 @@
-# Dependencies
-node_modules/
-.pnp/
+# dependencies
+/node_modules
+/.pnp
 .pnp.js
+.yarn/install-state.gz
 
-# Build outputs
-dist/
-build/
-out/
-.next/
-*.tsbuildinfo
+# testing
+/coverage
 
-# Testing
-coverage/
+# next.js
+/.next/
+/out/
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# production
+/build
 
-# Debug logs
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# Editor directories and files
-.idea/
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# local env files
+.env*.local
+.env
 
-# Temporary files
-*.log
-*.tmp
-.cache/
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# database
+/data
+*.db
+*.db-shm
+*.db-wal
