refactor: migrate project structure and update build tools
- Restructured project by moving source files from src/ to root directory
- Updated CI workflow to use 'bun run test' instead of type checking
- Modified package.json scripts to remove bun-specific flags
- Updated tsconfig.json paths and settings for new project structure
- Changed setup-db.js from ESM to CommonJS for better compatibility
- Fixed import paths in test files to use new project structure
- Updated README.md with more detailed documentation and API reference
- Added new GitHub workflow tasks to todo.md

This refactoring improves project organization and makes the build process more consistent across different environments.

--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bun --bun next dev",
-    "build": "bun --bun next build",
-    "start": "bun --bun next start",
-    "lint": "bun --bun next lint",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "db:setup": "bun run scripts/setup-db.js",
-    "typecheck": "bun --bun tsc --noEmit"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "db:setup": "node scripts/setup-db.js"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
