--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Run linting
       run: bun run lint
 
-    - name: Type check
-      run: npx tsc --noEmit
+    - name: Run tests
+      run: bun run test
 
   build:
     runs-on: ubuntu-latest
