--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "es2015",
     "lib": [
       "dom",
       "dom.iterable",
@@ -17,7 +17,6 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
     "plugins": [
       {
         "name": "next"
@@ -25,7 +24,7 @@
     ],
     "paths": {
       "@/*": [
-        "src/*"
+        "./*"
       ]
     }
   },
@@ -33,9 +32,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "tailwind.config.ts",
-    "vitest.config.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
