--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.8",
+    "@typescript/native-preview": "^7.0.0-dev.20250603.1",
     "better-sqlite3": "^9.0.0",
     "chart.js": "^4.4.0",
     "next": "14.0.0",
