--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         bun-version: latest
 
     - name: Install dependencies
-      run: bun install --frozen-lockfile
+      run: bun install
 
     - name: Run linting
       run: bun run lint
@@ -40,7 +40,7 @@ jobs:
         bun-version: latest
 
     - name: Install dependencies
-      run: bun install --frozen-lockfile
+      run: bun install
 
     - name: Build
       run: bun run build
